@startuml

title __MODEL's Class Diagram__\n

  package  {
    package ui.model {
      class AirportComboBoxModel {
          - airports : Airport[]
          - selected : Object
          + AirportComboBoxModel()
          + setSelectedItem()
          + getSelectedItem()
          + getSize()
          + getElementAt()
          + addListDataListener()
          + removeListDataListener()
      }
    }
  }
  

  package  {
    package ui.model {
      class BookingCheckoutTableModel {
          - columnNames : String[]
          + BookingCheckoutTableModel()
          + getRowCount()
          + getColumnCount()
          + getValueAt()
          - getListOfNamesAndTotal()
          - getListOfCostsAndTotal()
          - getListOfTypesAndTotal()
      }
    }
  }
  

  package  {
    package ui.model {
      class FlightSearchModel {
          {static} + AIRPORT_PROPERTY : String
          - support : PropertyChangeSupport
          - airports : Airport[]
          - departureDate : Date
          - costBased : boolean
          + FlightSearchModel()
          + addPropertyChangeListener()
          + removePropertyChangeListener()
          + setAirports()
          + getDepartureDate()
          + setDepartureDate()
          + getDepartureAirport()
          + setDepartureAirport()
          + getDestinationAirport()
          + setDestinationAirport()
          + isCostBased()
          + setCostBased()
          + updateAirports()
          + searchForFlight()
      }
    }
  }
  

  package  {
    package ui.model {
      class FlightSearchResultsTableModel {
          - columnNames : String[]
          ~ routes : ArrayList<Route>
          + FlightSearchResultsTableModel()
          + getRowCount()
          + getColumnCount()
          + getColumnName()
          + getValueAt()
      }
    }
  }
  

  package  {
    package ui.model {
      class HotelSearchModel {
          - hotels : ArrayList<Hotel>
          + HotelSearchModel()
          + getTableModel()
      }
    }
  }
  

  package  {
    package ui.model {
      class HotelSearchTableModel {
          - columnNames : String[]
          ~ hotels : List<Hotel>
          + HotelSearchTableModel()
          + getRowCount()
          + getColumnCount()
          + getColumnName()
          + getValueAt()
      }
    }
  }
  

  package  {
    package ui.model {
      class LoginModel {
          - username : String
          - password : String
          + LoginModel()
          + setUsername()
          + setPassword()
          + login()
      }
    }
  }
  

  package  {
    package ui.model {
      class RegisterModel {
          - userName : String
          - email : String
          - password : String
          + RegisterModel()
          + setUserName()
          + setEmail()
          + setPassword()
          + createUser()
          + getUserName()
          + getEmail()
          + getPassword()
      }
    }
  }
  

  package  {
    package ui.model {
      class Validator {
          + validateEmail()
          + validatePassword()
          + validateName()
      }
    }
  }
  

  AirportComboBoxModel -up-|> ComboBoxModel
  BookingCheckoutTableModel -up-|> AbstractTableModel
  BookingCheckoutTableModel o-- Booking : bookings
  FlightSearchModel o-- SearchController : searchController
  FlightSearchModel o-- Airport : departureAirport
  FlightSearchModel o-- Airport : destinationAirport
  FlightSearchResultsTableModel -up-|> AbstractTableModel
  HotelSearchModel o-- Airport : destination
  HotelSearchTableModel -up-|> AbstractTableModel
  LoginModel o-- Validator : validator
  RegisterModel o-- Validator : validator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
